modified:   examples/hide-show/hide-show-1/hide-show-1.html: * The image and table were     outside the ex1 div; moved them inside. * eliminated an unnecessary div with id example. * Add H2 example heading per template. * Added screen reader separators around example per template. * Put html source in pre tags instead of div tag.

--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -21,23 +21,16 @@
     demonstrate both command and toggle buttons.
   </p>
   <section>
-
-    <div id="example">
-
-      <img src="images/minard.png" aria-labelledby="id_short_desc"/>
-      <div id="ex1">
-      Charles Minard's 1869 chart showing the number of men in Napoleon’s 1812 Russian campaign army, their movements, as well as the temperature they encountered on the return path (
-        <span 
-          id="id_short_desc" 
-          tabindex="0" 
-          role="button" 
-          aria-expanded="true" 
-          aria-controls="id_long_desc"> 
-          chart details
-        </span>
-        ).
-      </div>
-
+    <h2 id="ex_label">Example</h2>
+    <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of" ></div>
+    <div id="ex1">
+      <img src="images/minard.png" aria-labelledby="id_short_desc" />
+      Charles Minard's 1869 chart showing the number of men in Napoleon’s 1812 Russian campaign
+      army, their movements, as well as the temperature they encountered on the return path ( 
+      <span
+        id="id_short_desc" tabindex="0" role="button" aria-expanded="true"
+        aria-controls="id_long_desc"
+      > chart details </span> ).
       <div id="id_long_desc">
         <h2 id="id_data_label">Data for Charles Minars's Chart of Naploean's Invasion of Russia</h2>
         <table aria-labelledby="id_data_label">
@@ -53,74 +46,167 @@
           </thead>
           <tbody>
             <tr>
-              <th scope="row">Kowno River</th><td>June 24th</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Kowno River</th>
+              <td>June 24th</td>
+              <td>442,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Wilna</th><td>June 30th</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Wilna</th>
+              <td>June 30th</td>
+              <td>400,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Witebsk</th><td>na</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Witebsk</th>
+              <td>na</td>
+              <td>175,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Smolensk</th><td>August 16th</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Smolensk</th>
+              <td>August 16th</td>
+              <td>145,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Chjat</th><td>na</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Chjat</th>
+              <td>na</td>
+              <td>127,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Mojaisk</th><td>September 7th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Mojaisk</th>
+              <td>September 7th</td>
+              <td>100,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Moscow</th><td>September 14th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Moscow</th>
+              <td>September 14th</td>
+              <td>100,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Advance</td>
             </tr>
             <tr>
-              <th scope="row">Malo-jarosewli</th><td>October 18th</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <th scope="row">Malo-jarosewli</th>
+              <td>October 18th</td>
+              <td>96,000</td>
+              <td>0</td>
+              <td>32</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Mojaisk</th><td>October 24th</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <th scope="row">Mojaisk</th>
+              <td>October 24th</td>
+              <td>87,000</td>
+              <td>0</td>
+              <td>32</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Wirma</th><td>na</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Wirma</th>
+              <td>na</td>
+              <td>55,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Smolensk</th><td>November 14th</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
+              <th scope="row">Smolensk</th>
+              <td>November 14th</td>
+              <td>37,000</td>
+              <td>-26</td>
+              <td>-13</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Orscha</th><td>na</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Orscha</th>
+              <td>na</td>
+              <td>24,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Botr</th><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
+              <th scope="row">Botr</th>
+              <td>na</td>
+              <td>20,000</td>
+              <td>-14</td>
+              <td>-7</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Studienska (reinforcements arrive)</th><td>December 1st</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
+              <th scope="row">Studienska (reinforcements arrive)</th>
+              <td>December 1st</td>
+              <td>50,000</td>
+              <td>-25</td>
+              <td>-13</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Minsk</th><td>December 1st</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
+              <th scope="row">Minsk</th>
+              <td>December 1st</td>
+              <td>28,000</td>
+              <td>-30</td>
+              <td>-22</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Moloderno</th><td>December 6th</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
+              <th scope="row">Moloderno</th>
+              <td>December 6th</td>
+              <td>28,000</td>
+              <td>-38</td>
+              <td>-34</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-             <th scope="row">Smorgeni</th> <td>December 7th</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
+              <th scope="row">Smorgeni</th>
+              <td>December 7th</td>
+              <td>12,000</td>
+              <td>-33</td>
+              <td>-27</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Wilna</td><td>na</th><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Wilna
+              </td>
+              <td>na
+              </th>
+              <td>8,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Kowno (reinforcements arrive)</th><td>December 14th</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Kowno (reinforcements arrive)</th>
+              <td>December 14th</td>
+              <td>10,000</td>
+              <td>na</td>
+              <td>na</td>
+              <td>Retreat</td>
             </tr>
           </tbody>
         </table>
-
       </div>
-
     </div>
-
-
-
+    <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
 
-      <section>
+  <section>
         <h2 id="kbd_label">Keyboard Support</h2>
         <table aria-labelledby="kbd_label">
           <thead>
@@ -239,9 +325,8 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre id="sc1"></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-
         <script>
           sourceCode.add('sc1', 'ex1');
           sourceCode.make();
