Added Disclosure Design Pattern Placeholder
modified aria-practices.html:
In the design pattern section, added a subsection placeholder for the disclosure (show/hide) design pattern with a link to issue #9.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -529,6 +529,14 @@
       <h3>Dialog (Non-Modal)</h3>
       <p>Drafting content for this section is tracked by <a href="https://github.com/w3c/aria-practices/issues/59">issue 59</a>. </p>
     </section>
+    
+    <section class="widget" id="disclosure">
+      <h3>Disclosure (Show/Hide)</h3>
+      <p>
+        Drafting content for this section is tracked by 
+        <a href="https://github.com/w3c/aria-practices/issues/9">issue 9</a>. 
+      </p>
+    </section>
 
     <section class="widget" id="grid">
       <h3>Grids : Interactive Tabular Data and Layout Containers</h3>
