Added link to issue 244
Modified examples/hide-show/hide-show-1/hide-show-1.html
at beginning of example, added link to issue #244 for tracking work on the example.

--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -15,6 +15,10 @@
 <body>
   <main>
     <h1>Disclosure (Show/Hide) Example</h1>
+    <p>
+      Development of this example is tracked in 
+      <a href="https://github.com/w3c/aria-practices/issues/244">issue 244.</a>
+    </p>
   <p>
     The following example demonstrates using the 
     <a href="../../../#disclosure">disclosure design pattern</a> 
