added links between examples

--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -20,6 +20,13 @@
     <a href="../../#h-button">button design pattern</a>
     demonstrate buttons that are used to show and hide the details of frequently asked questions (FAQ).
   </p>
+
+  <p>Similar examples include: </p>
+      <ul>
+        <li><a href="disclosure-img-long-description.html">Hide/show long description for an image.</a></li>
+      </ul>
+
+
   <section>
 
     <div id="example">
@@ -108,7 +115,8 @@
                 <td><code>dt</code></td>
                 <td>
                     <ul>
-                      <li>The <code>span[&quot;button&quot;]</code> is identified as an interactive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
+                      <li>The <code>dt[&quot;button&quot;]</code> is identified as an interactive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
+                      <li>In this example the <code>tabindex=0</code> is added using Javascript.</li>
                      </ul>
                 </td>
               </tr>
