update documentation on tab index being added by Javascript

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -192,6 +192,7 @@
                 <td>
                     <ul>
                       <li>The <code>span[&quot;button&quot;]</code> is identified as an interactive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
+                      <li>In this example the <code>tabindex=0</code> is added using Javascript.</li>
                      </ul>
                 </td>
               </tr>
