bug in documentation

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -209,7 +209,7 @@
               <tr>
                 <td></td>
                 <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
-                <td><code>div</code></td>
+                <td><code>span</code></td>
                 <td>
                     <ul>
                       <li>Indentifies the <code>button</code> button as <em>hiding</em> content identified with <code>aria-controls</code> property.</li>
