fixed problems with links and removed return key support

--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -72,7 +72,7 @@
               </td>
             </tr>
             <tr>
-              <th><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></th>
+              <th><kbd>Space</kbd></kbd></th>
               <td>
                 <ul>
                   <li>Toggle the content from being between shown and hidden.</li>
@@ -164,9 +164,9 @@
         <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
         <ul>
           <li>
-            CSS: <a href="css/hideShow1.css" type="tex/css">hideShow1.css</a>
+            CSS: <a href="css/disclosure-faq.css" type="tex/css">disclosure-faq.css</a>
           </li>
-          <li>Javascript: <a href="js/buttonExpanded.js" type="text/javascript">buttonExpanded.js</a></li>
+          <li>Javascript: <a href="js/disclosureButton.js" type="text/javascript">disclosureButton.js</a></li>
         </ul>
       </section>
 
