updated keyboard documentation

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -148,7 +148,7 @@
               </td>
             </tr>
             <tr>
-              <th><kbd>Space</kbd></th>
+              <th><kbd>Space</kbd> or <br/><kbd>Return</kbd></th>
               <td>
                 <ul>
                   <li>Toggle the content from being between shown and hidden.</li>
