--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -72,7 +72,7 @@
               </td>
             </tr>
             <tr>
-              <th><kbd>Space</kbd></kbd></th>
+              <th><kbd>Space</kbd> or <br/><kbd>Return</kbd></th>
               <td>
                 <ul>
                   <li>Toggle the content from being between shown and hidden.</li>
