Complete initial draft of long description disclosure example
Modified examples/disclosure/disclosure-img-long-description.html:
* Replaced link to issue #244 with link to issue 264, the review issue.added lin

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -16,8 +16,8 @@
   <main>
   <h1>Disclosure (Show/Hide) of Image Description</h1>
   <p>
-    Development of this example is tracked in
-    <a href="https://github.com/w3c/aria-practices/issues/244">issue 244.</a>
+    Please provide feedback on this example in 
+    <a href="https://github.com/w3c/aria-practices/issues/264">issue 264.</a>
   </p>
   <p>
     The following example demonstrates using the
