--- a/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
+++ b/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
@@ -253,47 +253,35 @@
   <section>
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: title of this variation of the implementation</h3>
-    <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label"
-      aria-label="Start of HTML for"
-    ></div>
-    <div id="sc1"></div>
-    <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label"
-      aria-label="End of HTML for"
-    ></div>
+    <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for" ></div>
+    <pre id="sc1"></pre>
+    <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for" ></div>
     <!-- 
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-      It renders the HTML in the preceding div with ID 'sc1'.
-      If you change the ID of either the 'ex1' div or the 'sc1' div, be sure to update the sourceCode.add function parameters.
+      It renders the HTML in the preceding pre element with ID 'sc1'.
+      If you change the ID of either the 'ex1' div or the 'sc1' pre, be sure to update the sourceCode.add function parameters.
     -->
     <script>sourceCode.add('sc1', 'ex1')</script>
 
     <h3 id="sc2_label">Example 2: title of this variation of the implementation</h3>
-    <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label"
-      aria-label="Start of HTML for"
-    ></div>
-    <div id="sc2"></div>
-    <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label"
-      aria-label="End of HTML for"
-    ></div>
+    <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for" ></div>
+    <pre id="sc2"></pre>
+    <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for" ></div>
     <!-- 
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex2'.
-      It renders the HTML in the preceding div with ID 'sc2'.
-      If you change the ID of either the 'ex2' div or the 'sc2' div, be sure to update the sourceCode.add function parameters.
+      It renders the HTML in the preceding pre element with ID 'sc2'.
+      If you change the ID of either the 'ex2' div or the 'sc2' pre, be sure to update the sourceCode.add function parameters.
       -->
     <script>sourceCode.add('sc2', 'ex2')</script>
 
     <h3 id="sc3_label">Example 3: title of this variation of the implementation</h3>
-    <div id="sc3_start_sep" role="separator" aria-labelledby="sc3_start_sep sc3_label"
-      aria-label="Start of HTML for"
-    ></div>
-    <div id="sc3"></div>
-    <div id="sc3_end_sep" role="separator" aria-labelledby="sc3_end_sep sc3_label"
-      aria-label="End of HTML for"
-    ></div>
+    <div id="sc3_start_sep" role="separator" aria-labelledby="sc3_start_sep sc3_label" aria-label="Start of HTML for" ></div>
+    <pre id="sc3"></pre>
+    <div id="sc3_end_sep" role="separator" aria-labelledby="sc3_end_sep sc3_label" aria-label="End of HTML for" ></div>
     <!-- 
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex3'.
-      It renders the HTML in the preceding div with ID 'sc3'.
-      If you change the ID of either the 'ex3' div or the 'sc3' div, be sure to update the sourceCode.add function parameters.
+      It renders the HTML in the preceding pre element with ID 'sc3'.
+      If you change the ID of either the 'ex3' div or the 'sc3' pre, be sure to update the sourceCode.add function parameters.
     -->
     <script>sourceCode.add('sc3', 'ex3') </script>
     <!--  After all source has been added, run make to do the insert.  -->
