Disclosure Pattern Outline for Issue #9
modified disclosure pattern section of aria-practices.html:
* Add outline of disclosure pattern.
* Draft keyboard subsection content.
* Add links to roles/properties that need to be described.
* Add links to disclosure example pages.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -536,6 +536,30 @@
         Drafting content for this section is tracked by 
         <a href="https://github.com/w3c/aria-practices/issues/9">issue 9</a>. 
       </p>
+      <p>Write description of disclosure pattern here.</p>
+      <section class="notoc">
+        <h4>Keyboard Interaction</h4>
+        <p>When the disclosure control has focus:</p>
+        <ul>
+          <li><kbd>Enter</kbd>: activates the disclosure control and toggles the visibility of the disclosure content.</li>
+          <li><kbd>Space</kbd>: activates the disclosure control and toggles the visibility of the disclosure content.</li>
+        </ul>
+      </section>
+      <section class="notoc">
+        <h4>WAI-ARIA Roles, States, and Properties</h4>
+        <ul>
+          <li>role <a href="#button" class="role-reference">button</a></li>
+          <li>state <a href="#aria-expanded" class="state-reference">aria-expanded</a></li>
+          <li>property <a href="#aria-controls" class="property-reference">aria-controls</a></li>
+        </ul>
+      </section>
+      <section class="notoc">
+        <h4>Examples</h4>
+        <ul>
+          <li><a href="examples/disclosure/disclosure-img-long-description.html">Disclosure (Show/Hide) of Image Description</a></li>
+          <li><a href="examples/disclosure/disclosure-faq.html">Disclosure (Show/Hide) of Answers to Frequently Asked Questions</a></li>
+        </ul>
+      </section>
     </section>
 
     <section class="widget" id="grid">
