Fix HTML validation issue in toggle button description
modified aria-practices.html:
Removed quote characters from the toggle button description and replaced them with named entities `&quot;`.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -318,8 +318,8 @@
           To tell assistive technologies that a button is a toggle button, specify a value for the attribute <a href="#aria-pressed" class="state-reference">aria-pressed</a>.
           For example, a button labeled mute in an audio player could indicate that sound is muted by setting the pressed state true.
           <strong>Important:</strong> it is critical the label on a toggle does not change when its state changes.
-          In this example, when the pressed state is true, the label remains “Mute” so a screen reader would say something like “Mute toggle button pressed”.
-          Alternatively, if the design were to call for the button label to change from “Mute” to “Unmute,” the aria-pressed attribute would not be needed.
+          In this example, when the pressed state is true, the label remains &quot;Mute&quot; so a screen reader would say something like &quot;Mute toggle button pressed&quot;.
+          Alternatively, if the design were to call for the button label to change from &quot;Mute&quot; to &quot;Unmute,&quot; the aria-pressed attribute would not be needed.
         </li>
         <li>Menu button: as described in the <a href="#menubutton">menu button pattern</a>, a button is revealed to assistive technologies as a menu button if it has the property <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set to <code>true</code>.</li>
       </ul>
