--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -46,7 +46,7 @@
 
     <section>
       <h2>Accessibility Features</h2>
-      <p>If markedup with a labelled <code>nav</code> element, the breadcrumb will be exposed as such.</p>
+      <p>If marked-up with a labelled <code>nav</code> element, the breadcrumb will be exposed as such.</p>
     </section>
 
     <section>
