Remove Presentation Role Section Review Issue Link
modified aria-practices.html: Remove link to issue #176 from presentation_role section.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3133,12 +3133,7 @@ A tree that provides navigation to a set of web pages and demonstrates how to ex
   </section>
 
   <section id="presentation_role">
-    <h2>
-      Intentionally Hiding Semantics with the <code>presentation</code> Role
-    </h2>
-    <p>
-      Please provide feedback on this section in <a href="https://github.com/w3c/aria-practices/issues/176">issue 176</a>.
-    </p>
+    <h2>Intentionally Hiding Semantics with the <code>presentation</code> Role</h2>
     <p>
       While ARIA is primarily used to express semantics, there are some situations where hiding an
       element’s semantics from assistive technologies is helpful. This is done with the
