Editorial revisions to breadcrumb example property table
modified examples/breadcrumb/index.html:
1. Remove links from states and properties in Breadcrumb example. We are not maintaining links to the aria spec or html spec from example pages; they are not respec documents.
2. Editorial revision to description in aria-current row.

--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -66,13 +66,13 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code><a href="http://www.w3.org/TR/wai-aria-1.1/#aria-current">aria-current</a>=<q>page</q></code>
+              <code>aria-current=<q>page</q></code>
             </th>
             <td>
-              <code><a href="https://www.w3.org/TR/html/textlevel-semantics.html#the-a-element">a</a></code>
+              <code>a</code>
             </td>
             <td>
-              Mark the current page within the widget.
+              Applied to the last link in the set to indicate that it represents the current page.
             </td>
           </tr>
         </tbody>
