Add aria-label to breadcrumb example properties table
modified examples/breadcrumb/index.html:
In the states and properties table, added a row for the nav element and aria-label property.

--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -66,6 +66,18 @@
           <tr>
             <td></td>
             <th scope="row">
+              <code>aria-label=<q>Breadcrumb</q></code>
+            </th>
+            <td>
+              <code>nav</code>
+            </td>
+            <td>
+              Provides a label that describes the type of navigation provided in the <code>nav</code> element.
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
               <code>aria-current=<q>page</q></code>
             </th>
             <td>
