--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -25,7 +25,16 @@
         Feedback and progress on editorial work on this page are being tracked in 
         <a href="https://github.com/w3c/aria-practices/issues/223">issue 223.</a>
       </p>
-      <p>This example implements the features of the <a href="../../../#TreeView">Treeview Design Pattern</a> for simulation of a file selector.  This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>.   The ARIA 1.0 Spectification for these properties states the browser can compute these values, but is not required to.</p>
+      <p>
+        The below example implements the 
+        <a href="../../../#TreeView">Treeview Design Pattern</a> 
+        to simulate a file selector.  
+        When users activate an item that represents a file name in the below tree, the name of the selected file appears in the read-only edit field next to the tree.
+      </p>
+      <p>
+        This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>aria-level</code>.   
+        The ARIA 1.0 specification for these properties states that browsers can, but are not required to, compute these values.
+       </p>
       <p>Similar examples include: </p>
       <ul>
         <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
