--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -8,6 +8,7 @@
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
+<script src="../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
 <link href="css/dialog.css" rel="stylesheet">
@@ -17,7 +18,7 @@
   <main>
   <h1>Modal Dialog Example</h1>
   <p>
-    Following is an example implementation of the 
+    Following is an example implementation of the
     <a href="../../#dialog">design pattern for modal dialogs.</a>
       The below <q>Add Delivery Address</q> button opens a modal dialog that contains two buttons that open other dialogs.
       The accessibility features section explains the rationale for initial focus placement and use of <code>aria-describedby</code> in each dialog.
@@ -27,101 +28,144 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
       <button onclick="openDialog('dialog1', this)">Add Delivery Address</button>
-      <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
-        <h2 id="dialog1_label">Add Delivery Address</h2>
-        <label>Street:<input type="text"></label> <label>City: <input type="text"></label>
-        <label>State: <input type="text"></label> <label>Zip: <input type="text"></label>
-        <label for="special_instructions"> Special instructions, .e.g., gate code or other
-          information to make it easy for the driver to find you:</label>
-        <input id="special_instructions" type="textarea">
-        <button onclick="openDialog('dialog2', this)">Verify Address</button>
-        <button onclick="replaceDialog('dialog3', undefined, 'dialog3_close_btn')">Add</button>
-        <button onclick="closeDialog(this)">Cancel</button>
-      </div>
 
-      <!--  Second modal to open on top of the first modal  -->
-      <div id="dialog2" role="dialog" aria-labelledby="dialog2_label"
-        aria-describedby="dialog2_desc" aria-modal="true" class="hidden"
-      >
-        <h2 id="dialog2_label">Verification Result</h2>
-        <div id="dialog2_desc">
-          <p tabindex="0">This is just a demonstration. If it were a real application, it would
-            provide a message telling whether the entered address is valid.</p>
-          <p>
-            For demonstration purposes, this dialog has a lot of text. It demonstrates a
-              scenario where:
-            </p>
-          <ul>
-            <li>The first interactive element, the help link, is at the bottom of the dialog.</li>
-            <li>If focus is placed on the first interactive element when the dialog opens, the
-              validation message may not be visible.</li>
-            <li>If the validation message is visible and the focus is on the help link, then
-              the focus may not be visible.</li>
-            <li>
-              When the dialog opens, it is important that both:
-              <ul>
-                <li>The beginning of the text is visible so users do not have to scroll back to
-                  start reading.</li>
-                <li>The keyboard focus always remains visible.</li>
-              </ul>
-            </li>
-          </ul>
-          <p>There are several ways to resolve this issue:</p>
-          <ul>
-            <li>Place an interactive element at the top of the dialog, e.g., a button or link.</li>
-            <li>Make a static element focusable, e.g., the dialog title or the first block of
-              text.</li>
-          </ul>
-          <p>
-            Please <em>DO NOT </em> make the element with role dialog focusable!
-          </p>
-          <ul>
-            <li>The larger a focusable element is, the more difficult it is to visually
-              identify the location of focus, especially for users with a narrow field of view.</li>
-            <li>The dialog has a visual boarder. So creating a clear visual indicator of focus
-              when the entire dialog has focus is not very feasible.
-            <li>Screen readers read the label and content of focusable elements. The dialog
-              contains its label and a lot of content! If a dialog like this one has focus, the
-              actual focus is difficult to comprehend.</li>
-          </ul>
-          <p>
-            In this dialog, the first paragraph has <code>tabindex=<q>0</q></code>. The first
-            paragraph is also contained inside the element that provides the dialog description, i.e., the element that is referenced
-            by <code>aria-describedby</code>. With some screen readers, this may have one negative
-            but relatively insignificant side effect when the dialog opens -- the first paragraph
-            may be announced twice. Nonetheless, making the first paragraph focusable and setting
-            the initial focus on it is the most broadly accessible option.
-          </p>
+      <div id="dialog_layer">
+        <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
+          <h2 id="dialog1_label">Add Delivery Address</h2>
+          <div class="dialog_form">
+            <div class="dialog_form_item">
+              <label>
+                <span class="label_text">Street:</span>
+                <input type="text" class="wide_input">
+              </label>
+            </div>
+            <div class="dialog_form_item">
+              <label>
+                <span class="label_text">City:</span>
+                <input type="text" class="city_input">
+              </label>
+            </div>
+            <div class="dialog_form_item">
+              <label>
+                <span class="label_text">State:</span>
+                <input type="text" class="state_input">
+              </label>
+            </div>
+            <div class="dialog_form_item">
+              <label>
+                <span class="label_text">Zip:</span>
+                <input type="text" class="zip_input">
+              </label>
+            </div>
+
+            <div class="dialog_form_item">
+              <label for="special_instructions">
+                <span class="label_text">Special instructions:</span>
+              </label>
+              <input id="special_instructions" type="textarea" class="wide_input">
+              <div class="label_info">
+                .e.g., gate code or other information to make it easy for the driver to find you
+              </div>
+            </div>
+          </div>
+          <div class="dialog_form_actions">
+            <button onclick="openDialog('dialog2', this)">Verify Address</button>
+            <button onclick="replaceDialog('dialog3', undefined, 'dialog3_close_btn')">Add</button>
+            <button onclick="closeDialog(this)">Cancel</button>
+          </div>
         </div>
-        <a href="#" onclick="openDialog('dialog4', this)">link to help</a>
-        <button onclick="openDialog('dialog4', this)">accepting an alternative form</button>
-        <button onclick="closeDialog(this)">Close</button>
+
+        <!--  Second modal to open on top of the first modal  -->
+        <div id="dialog2" role="dialog" aria-labelledby="dialog2_label"
+          aria-describedby="dialog2_desc" aria-modal="true" class="hidden"
+        >
+          <h2 id="dialog2_label">Verification Result</h2>
+          <div id="dialog2_desc" class="dialog_desc">
+            <p tabindex="0">This is just a demonstration. If it were a real application, it would
+              provide a message telling whether the entered address is valid.</p>
+            <p>
+              For demonstration purposes, this dialog has a lot of text. It demonstrates a
+                scenario where:
+              </p>
+            <ul>
+              <li>The first interactive element, the help link, is at the bottom of the dialog.</li>
+              <li>If focus is placed on the first interactive element when the dialog opens, the
+                validation message may not be visible.</li>
+              <li>If the validation message is visible and the focus is on the help link, then
+                the focus may not be visible.</li>
+              <li>
+                When the dialog opens, it is important that both:
+                <ul>
+                  <li>The beginning of the text is visible so users do not have to scroll back to
+                    start reading.</li>
+                  <li>The keyboard focus always remains visible.</li>
+                </ul>
+              </li>
+            </ul>
+            <p>There are several ways to resolve this issue:</p>
+            <ul>
+              <li>Place an interactive element at the top of the dialog, e.g., a button or link.</li>
+              <li>Make a static element focusable, e.g., the dialog title or the first block of
+                text.</li>
+            </ul>
+            <p>
+              Please <em>DO NOT </em> make the element with role dialog focusable!
+            </p>
+            <ul>
+              <li>The larger a focusable element is, the more difficult it is to visually
+                identify the location of focus, especially for users with a narrow field of view.</li>
+              <li>The dialog has a visual boarder. So creating a clear visual indicator of focus
+                when the entire dialog has focus is not very feasible.
+              <li>Screen readers read the label and content of focusable elements. The dialog
+                contains its label and a lot of content! If a dialog like this one has focus, the
+                actual focus is difficult to comprehend.</li>
+            </ul>
+            <p>
+              In this dialog, the first paragraph has <code>tabindex=<q>0</q></code>. The first
+              paragraph is also contained inside the element that provides the dialog description, i.e., the element that is referenced
+              by <code>aria-describedby</code>. With some screen readers, this may have one negative
+              but relatively insignificant side effect when the dialog opens -- the first paragraph
+              may be announced twice. Nonetheless, making the first paragraph focusable and setting
+              the initial focus on it is the most broadly accessible option.
+            </p>
+          </div>
+          <div class="dialog_form_actions">
+            <a href="#" onclick="openDialog('dialog4', this)">link to help</a>
+            <button onclick="openDialog('dialog4', this)">accepting an alternative form</button>
+            <button onclick="closeDialog(this)">Close</button>
+          </div>
+        </div>
+
+        <!--  Dialog that replaces dialog 1.  -->
+        <div id="dialog3" role="dialog" aria-labelledby="dialog3_label"
+          aria-describedby="dialog3_desc" aria-modal="true" class="hidden"
+        >
+          <h2 id="dialog3_label">Address Added</h2>
+          <p id="dialog3_desc" class="dialog_desc">
+            The address you provided has been added to your list of delivery addresses. It is ready
+            for immediate use. If you wish to remove it, you can do so from
+            <a href="#" onclick="openDialog('dialog4', this)">your profile.</a>
+          </p>
+          <div class="dialog_form_actions">
+            <button id="dialog3_close_btn" onclick="closeDialog(this)">OK</button>
+          </div>
+        </div>
+
+        <div id="dialog4" role="dialog" aria-labelledby="dialog4_label"
+          aria-describedby="dialog4_desc" class="hidden"
+          aria-modal="true"
+        >
+          <h2 id="dialog4_label">End of the Road!</h2>
+          <p id="dialog4_desc" class="dialog_desc">
+            You activated a fake link or button that goes nowhere!
+            The link or button is present for demonstration purposes only.
+          </p>
+          <div class="dialog_form_actions">
+            <button id="dialog4_close_btn" onclick="closeDialog(this)">Close</button>
+          </div>
+        </div>
       </div>
 
-      <!--  Dialog that replaces dialog 1.  -->
-      <div id="dialog3" role="dialog" aria-labelledby="dialog3_label"
-        aria-describedby="dialog3_desc" aria-modal="true" class="hidden"
-      >
-        <h2 id="dialog3_label">Address Added</h2>
-        <p id="dialog3_desc">
-          The address you provided has been added to your list of delivery addresses. It is ready
-          for immediate use. If you wish to remove it, you can do so from
-          <a href="#" onclick="openDialog('dialog4', this)">your profile.</a>
-        </p>
-        <button id="dialog3_close_btn" onclick="closeDialog(this)">OK</button>
-      </div>
-      
-      <div id="dialog4" role="dialog" aria-labelledby="dialog4_label"
-        aria-describedby="dialog4_desc" class="hidden"
-        aria-modal="true"
-      >
-        <h2 id="dialog4_label">End of the Road!</h2>
-        <p id="dialog4_desc">
-          You activated a fake link or button that goes nowhere! 
-          The link or button is present for demonstration purposes only.
-        </p>
-        <button id="dialog4_close_btn" onclick="closeDialog(this)">Close</button>
-      </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
@@ -190,7 +234,7 @@
           <th><kbd>Tab</kbd></th>
           <td>
             <ul>
-              <li>Moves focus to next focusable element inside the dialog.</li> 
+              <li>Moves focus to next focusable element inside the dialog.</li>
               <li>When focus is on the last focusable element in the dialog, moves focus to the first focusable element in the dialog.</li>
             </ul>
           </td>
@@ -199,7 +243,7 @@
           <th><kbd>Shift + Tab</kbd></th>
           <td>
             <ul>
-              <li>Moves focus to previous focusable element inside the dialog.</li> 
+              <li>Moves focus to previous focusable element inside the dialog.</li>
               <li>When focus is on the first focusable element in the dialog, moves focus to the last focusable element in the dialog.</li>
             </ul>
           </td>
@@ -261,7 +305,7 @@
       </tbody>
     </table>
   </section>
-  
+
   <section>
     <h2>Javascript and CSS Source Code</h2>
     <ul>
