updated notes to discuss using of :before and :after CSS techniques for visual cues

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -149,7 +149,9 @@
           to easily see which elements the roles and properties need to be included.</li>
         <li>This is useful for people writing their own scripts to see which elements need
           roles and properties.</li>
-      </ol>
+        <li>CSS <code>:after</code> is used to render the down arrow in a menubar item using the CSS <code>content</code> property string using entity values.</li>
+        <li>CSS <code>:after</code> is used to render right arrow using the CSS <code>content</code> property string using entity values in pull down menu items that have sub-menus.</li>
+        </ol>
     </section>
     <section>
       <h3 id="ex2_label">Example 2: ARIA markup added dynamically</h3>
