--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -144,6 +144,8 @@
     <ol>
       <li>Menu radio buttons and checkboxes indicate the current format settings.</li>
       <li>Disabled menu items are demonstrated in the font size menu, which  includes two disabled menuitems        .</li>
+      <li>CSS <code>:after</code> is used to render the down arrow in a menubar item using the CSS <code>content</code> property string using entity values.</li>
+      <li>CSS <code>:before</code> is used to render checks using the CSS <code>content</code> property string using entity values on <code>menuritemadio</code> and <code>menuitemcheckbox</code> items.</li>
     </ol>
   </section>
 
