--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -83,7 +83,7 @@
             Link 3
           </th>
           <td>
-            CSS content property on a <code>span</code> element.
+            CSS <code>:before</code> content property on a <code>span</code> element.
           </td>
           <td id="ex3">
             <span 
